<resources>
    <string name="app_name">Thang Hoa Coffee</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="ghi_nho_dang_nhap">Ghi nhớ đăng nhập</string>
    <string name="loading">Đợi tẹo...</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại !</string>
    <string name="nhap_ten_dang_nhap">Nhập tên đăng nhập</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="thong_bao">Thông báo</string>
    <string name="other_people_login">Tài khoản bị đăng nhập từ nơi khác !</string>
    <string name="dong">Đóng</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="gop_y">Góp ý</string>
    <string name="dang_ky_tai_khoan">Đăng ký tài khoản mới</string>
    <string name="ho_ten">Họ tên đầy đủ</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="thong_tin_tai_khoan">Thông tin tài khoản</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="nhap_ho_ten">Nhập họ tên</string>
    <string name="mat_khau_khong_khop">Mật khẩu không khớp</string>
    <string name="dang_ky_that_bai">Đăng ký thất bại !</string>
    <string name="ten_tai_khoan_da_ton_tai">Tên tài khoản đã tồn tại</string>
    <string name="dang_ky_thanh_cong">Đăng ký thành công</string>
    <string name="kiem_tra_ket_noi_mang">Kiểm tra kết nối mạng</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="thong_tin_cua_toi">Thông tin của tôi</string>
    <string name="dat_ban">Đặt bàn</string>
    <string name="thong_tin">Thông tin</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="noi_dung">Nội dung</string>
    <string name="nhap_tieu_de">Nhập tiêu đề</string>
    <string name="nhap_noi_dung">Nhập nội dung</string>
    <string name="cam_on_ban_da_gop_y">Cảm ơn bạn đã góp ý cho chúng tôi</string>
    <string name="gap_loi">Gặp lỗi !</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="dong_y">Đồng ý</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="mat_khau_khong_dung">Mật khẩu không đúng</string>
    <string name="thay_doi_mat_khau_thanh_cong">Thay đổi mật khẩu thành công</string>
    <string name="thay_doi_mat_khau_that_bai">Thay đổi mật khẩu thất bại</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="gio_den">Giờ đến:</string>
    <string name="yeu_cau">Yêu cầu</string>
    <string name="nhap_gio_den">Nhập giờ đến</string>
    <string name="dat_ban_thanh_cong">Đặt bàn thành công</string>
    <string name="thong_tin_dat_ban">Thông tin đặt bàn</string>
    <string name="info_yeu_cau">Yêu cầu:</string>
    <string name="info_gio_den">Giờ đến:</string>
    <string name="cap_nhat_thong_tin">Cập nhật</string>
    <string name="huy_dat">Hủy đặt</string>
    <string name="da_xay_ra_loi">Đã xảy ra lỗi</string>
    <string name="ban_co_dong_y_huy_dat_ban">Bạn có đồng ý hủy đặt bàn ?</string>
    <string name="cap_nhat_dat_ban">Cập nhật đặt bàn</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="cap_nhat_dat_ban_thanh_cong">Cập nhật đặt bàn thành công</string>
    <string name="thong_tin_cua_ban_da_duoc_cap_nhat">Thông tin của bạn đã được cập nhật</string>
    <string name="da_huy_dat_ban">Đã huỷ đặt bàn !</string>
    <string name="tai_danh_sach_tin_tuc_that_bai">Tải danh sách tin tức thất bại !</string>
    <string name="gioi_thieu_ve_nha_hang">Giới thiệu về nhà hàng</string>
    <string name="introduce">Nhà hàng chúng tôi với những đầu bếp chuyên nghiệp thành thạo các món ăn trên toàn thế giới cùng với bề dày lịch sử của nhà hàng, với đội ngũ nhân viên chuyên nghiệp, phong cách phục vụ quý tộc sẽ mang đến cho quý khách sự thoải mái và ngon miệng.</string>
    <string name="thong_tin_khach_hang">Thông tin tài khoản</string>
    <string name="info_ten_khach_hang">Họ tên:</string>
    <string name="info_so_dien_thoai">Số điện thoại:</string>
    <string name="info_ten_dang_nhap">Tên đăng nhập:</string>
    <string name="info_dia_chi">Địa chỉ:</string>
    <string name="tai_danh_sach_thuc_don_that_bai">Tải danh sách thực đơn thất bại !</string>
    <string name="thong_tin_phuc_vu">Thông tin phục vụ</string>
    <string name="tong_tien">Tổng tiền:</string>
    <string name="sale">Sale</string>
    <string name="tinh_tien">Tính tiền</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="tai_thong_tin_phuc_vu_that_bai">Tải thông tin phục vụ thất bại !</string>
    <string name="cap_nhat_dat_ban_that_bai">Cập nhật thông tin đặt bàn thất bại !</string>
    <string name="dat_ban_that_bai">Đặt bàn thất bại</string>
    <string name="dang_phuc_vu">Đang phục vụ</string>
    <string name="trong">Trống</string>
    <string name="dat_truoc">Đặt trước</string>
    <string name="huy_ban">Huỷ bàn</string>
    <string name="info_thong_tin_dat_ban">Thông tin đặt bàn</string>
    <string name="info_khoang_gio_den">Khoảng giờ đến:</string>
    <string name="error">Đã xảy ra lỗi</string>
    <string name="tai_lai">Tải lại</string>
    <string name="huy">Huỷ</string>
    <string name="goi_mon">Gọi món</string>
    <string name="ban_can_dang_nhap_de_goi_mon">Bạn cần phải đăng nhập để gọi món !</string>
    <string name="da_tao_hoa_don_moi">Đã tạo hoá đơn mới</string>
    <string name="ban_duoc_giam_gia">Bạn được giảm giá</string>
    <string name="da_them_mon">Đã thêm món</string>
    <string name="tien_mon">Tiền món:</string>
    <string name="tien_giam_gia">Tiền giảm giá:</string>
    <string name="da_tinh_tien">Cảm ơn bạn đã đến với nhà hàng</string>
    <string name="da_gui_yeu_cau">Đã gửi yêu cầu, vui lòng đợi xác nhận !</string>
    <string name="gui_yeu_cau_that_bai">Gửi yêu cầu thất bại !</string>
</resources>
