<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="Bàn 12"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tinh_tien"
        android:textColor="@color/colorTextInfo"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tien_mon"
            android:textColor="@color/colorTextField"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tien_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="150K"
            android:textColor="@color/colorTextMoney"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_so_luong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="(23)"
            android:textColor="@color/colorTextInfo"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tien_giam_gia"
            android:textColor="@color/colorTextField"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tien_giam_gia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25k"
            android:textColor="@color/colorTextMoney"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_giam_gia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="(20%)"
            android:textColor="@color/colorTextInfo"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:weightSum="2">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1.8"
            android:background="@color/colorPrimary" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tong_tien"
            android:textColor="@color/colorTextField"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tong_tien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="125k"
            android:textColor="@color/colorTextMoney"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_ok"
            style="@style/CommonButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radius"
            android:text="@string/dong_y" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/CommonButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radius"
            android:text="@string/huy" />
    </TableRow>
</LinearLayout>